[gd_scene load_steps=7 format=3 uid="uid://c6w8nkbv6tda7"]

[ext_resource type="Script" uid="uid://csq3ukuubi4er" path="res://FountainScene.gd" id="1_w1g7q"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h5f8c"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_q5k8g"]
sky_top_color = Color(0.48, 0.6, 0.78, 1)
sky_horizon_color = Color(0.8, 0.85, 0.9, 1)
ground_bottom_color = Color(0.3, 0.25, 0.2, 1)
ground_horizon_color = Color(0.8, 0.85, 0.9, 1)

[sub_resource type="Sky" id="Sky_pbr4f"]
sky_material = SubResource("ProceduralSkyMaterial_q5k8g")

[sub_resource type="Environment" id="Environment_ylf6v"]
background_mode = 2
sky = SubResource("Sky_pbr4f")

[sub_resource type="BoxShape3D" id="BoxShape3D_abcde"]
size = Vector3(100, 0.1, 100)

[node name="FountainScene" type="Node3D"]
script = ExtResource("1_w1g7q")

[node name="Emitters" type="Node3D" parent="."]

[node name="Pedestrians" type="Node3D" parent="."]

[node name="PlayerBody" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerBody"]
shape = SubResource("CapsuleShape3D_h5f8c")

[node name="CameraPivot" type="Node3D" parent="PlayerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CameraFirstPerson" type="Camera3D" parent="PlayerBody/CameraPivot"]
current = true

[node name="SquealPlayer" type="AudioStreamPlayer" parent="PlayerBody/CameraPivot/CameraFirstPerson"]

[node name="CameraThirdPerson" type="Camera3D" parent="PlayerBody/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 3)

[node name="OverviewCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="StatusDisplay" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 120.0
text = "Status:"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ylf6v")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 0)

[node name="Ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_abcde")

[node name="CSGBox3D" type="CSGBox3D" parent="Ground/CollisionShape3D"]
size = Vector3(100, 0.1, 100)

[node name="AmbientSoundPlayer" type="AudioStreamPlayer" parent="."]

[node name="PedestrianSoundPlayer" type="AudioStreamPlayer3D" parent="."]
